--- a/src/content/blog/manufacturing.mdx
+++ b/src/content/blog/manufacturing.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Modern Manufacturing"
+title: "Myths of Modern Manufacturing"
 date: "2025-05-15"
 formattedDate: "May 15, 2025"
 description: "A deep dive into the economics of automation and the future of manufacturing."
