--- a/src/content/blog/manufacturing.mdx
+++ b/src/content/blog/manufacturing.mdx
@@ -6,6 +6,7 @@ description: "A deep dive into the economics of automation and the future of man
 coverImage: "../../assets/china_factory.png"
 readingTime: 8
 tags: ["manufacturing", "technology", "future"]
+category: "Philosophy"
 ---
 
 import { Image } from "astro:assets";
