--- a/src/content/blog/pid.mdx
+++ b/src/content/blog/pid.mdx
@@ -6,6 +6,7 @@ coverImage: "../../assets/pid.png"
 description: "An interactive dive into proportional, integral, derivative (PID) control systems."
 readingTime: 18
 tags: ["controls", "engineering", "interactive"]
+category: "Interactive"
 ---
 
 import MotorDemo from "../../components/pid/MotorDemo";
@@ -17,7 +18,7 @@ import ControlLoopDiagram from "../../components/pid/ControlLoopDiagram";
 import TuningChallenge from "../../components/pid/TuningChallenge";
 import ComparisonPlayground from "../../components/pid/ComparisonPlayground";
 
-You've probably benefited from multiple PID controllers today without realizing it. They're in your car's cruise control, your home thermostat, and the robotic arm that assembled your phone. PID controllers are everywhere because they provide an elegantly simple solution to a common problem: **how do you get something to go where you want, and stay there?**
+You've probably benefited from multiple PID controllers today without even realizing it. They're in your car's cruise control, your home thermostat, and the robotic arm that assembled your phone. PID controllers are everywhere because they provide an elegantly simple solution to a common problem: **how do you get a dynamic system to go where you want, and stay there despite disturbances?**
 
 
 
