--- a/src/content/blog/this-website.mdx
+++ b/src/content/blog/this-website.mdx
@@ -5,6 +5,7 @@ formattedDate: "January 15, 2025"
 description: "Insights into the design and development of this website."
 readingTime: 5
 tags: ["web design", "mdx", "astro", "react"]
+category: "Projects"
 ---
 
 # What is this website?
