--- a/src/content/blog/about.mdx
+++ b/src/content/blog/about.mdx
@@ -4,6 +4,7 @@ date: "2025-01-15"
 formattedDate: "January 15, 2025"
 description: "This is a post about me"
 readingTime: 3
+category: "Philosophy"
 ---
 
 I'm currently attending the [**University of Texas at Austin**](/timeline/ut), where I'm studying **Electrical and Computer Engineering (ECE)**. I am part of the **[Longhorn Racing Electric](/timeline/lhr)** team, where I develop electrical systems for our Formula SAE electric race car.
